@@ -1,3 +1,8 @@
+2004-01-07  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* automake/amcompile.am: New.
+	* configure.ac: Add subdir-objects, AM_PROG_CC_C_O.
+
 2003-12-17  Joel Sherrill <joel@OARcorp.com>
 
     * aclocal/version.m4: Updated to rtems-20031217-test.
